# Explainable-Contrastive-Anomaly-Detection

./: CITATION.cff  Dockerfile  README.md  pyproject.toml  requirements.txt
configs/: tabular_small.yaml  timeseries_small.yaml
notebooks/: demo.ipynb
scripts/: evaluate.py  explain.py  pretrain_contrastive.py  train_detector.py
tests/: test_imports.py
xadl/: data.py  losses.py  utils.py
xadl/explain/: explain.py
xadl/models/: encoder.py  heads.py
xadl/training/: contrastive_trainer.py  detector_trainer.py
